--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,99 @@
   border: 2px solid black;
   border-radius: 10px;
 }
+
+@keyframes slide-dealer-card {
+  0% {
+    transform: translate3d(-100%, -150%, 0) rotateY(180deg);
+  }
+
+  100% {
+    transform: translate3d(0, 0, 0) rotateY(0deg);
+  }
+}
+
+@keyframes slide-second-card-dealer {
+  0% {
+    transform: translate3d(-100%, -150%, 0);
+  }
+
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slide-player-card {
+  0% {
+    transform: translate3d(-10vw, -100vh, 0) rotateY(180deg);
+  }
+
+  100% {
+    transform: translate3d(0, 0, 0) rotateY(0deg);
+  }
+}
+
+@keyframes rotate-second-dealer-card {
+  0% {
+    transform: rotateY(180deg);
+  }
+
+  100% {
+    transform: rotateY(0deg);
+  }
+}
+
+.animation-card-dealer {
+  animation: slide-dealer-card 1000ms ease-in-out;
+}
+
+.animation-second-card-dealer {
+  animation: slide-second-card-dealer 1000ms ease-in-out 1200ms;
+  animation-fill-mode: both;
+}
+
+.animation-card-player {
+  animation: slide-player-card 1500ms ease-in-out 150ms;
+  animation-fill-mode: both;
+}
+
+.animation-second-card-player {
+  animation: slide-player-card 1500ms ease-in-out 550ms;
+  animation-fill-mode: both;
+}
+
+.animation-third-card-player {
+  animation: slide-player-card 1500ms ease-in-out;
+  animation-fill-mode: both;
+}
+
+.animation-rotate-second-dealer-card {
+  animation: rotate-second-dealer-card 1000ms ease-in-out;
+  animation-fill-mode: both;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
+}
